monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4119/A4119a.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4119;

grammar A4119a {

  @Deprecated
  @Deprecated
  A = "";

}
